kustomize/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploymenttest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deploymenttest
  template:
    metadata:
      labels:
        app: deploymenttest
    spec:
      containers:
      - name: deploymenttest
        image: ghcr.io/stianhg/deploymenttest:main
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 2000m
            memory: 512Mi          
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
