kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploymenttest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploymenttest
  template:
    metadata:
      labels:
        app: deploymenttest
    spec:
      containers:
      - name: deploymenttest
        image: ghcr.io/stianhg/deploymenttest # {"$imagepolicy": "flux-system:deploymenttest-policy"}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
