kustomize/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer
spec:
  selector:
    app: deploymenttest
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 90
