kustomize/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: NodePort
  selector:
    app: deploymenttest
  ports:
    - port: 5002
      protocol: TCP
      targetPort: 80
