kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploymenttest
spec:
  type: NodePort
  selector:
    app: deploymenttest
  ports:
    - name: http
      port: 3050
      protocol: TCP
      targetPort: 3000   
      nodePort: 31000
